--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@slimio/addon": "^0.1.0",
     "leveldown": "^4.0.1",
-    "levelup": "^3.1.0"
+    "levelup": "^3.1.0",
+    "protocol-buffers": "^4.1.0"
   }
 }
