--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@escommunity/minami": "^1.0.0",
     "@slimio/eslint-config": "^1.1.7",
+    "@types/better-sqlite3": "^3.1.3",
     "@types/es6-shim": "^0.31.37",
     "@types/leveldown": "^1.7.2",
     "@types/levelup": "^3.1.0",
@@ -31,8 +32,7 @@
   "dependencies": {
     "@slimio/addon": "^0.4.0",
     "@slimio/is": "^1.1.0",
-    "leveldown": "^4.0.1",
-    "levelup": "^3.1.1",
-    "protocol-buffers": "^4.1.0"
+    "@slimio/utils": "^0.3.0",
+    "better-sqlite3": "^4.1.4"
   }
 }
