--- a/package.json
+++ b/package.json
@@ -19,20 +19,19 @@
   "homepage": "https://github.com/SlimIO/Events#readme",
   "devDependencies": {
     "@escommunity/minami": "^1.0.0",
-    "@slimio/eslint-config": "^1.1.7",
+    "@slimio/eslint-config": "^1.1.8",
     "@types/better-sqlite3": "^3.1.3",
     "@types/es6-shim": "^0.31.37",
-    "@types/leveldown": "^1.7.2",
-    "@types/levelup": "^3.1.0",
-    "@types/node": "^10.10.1",
+    "@types/node": "^10.11.3",
     "ava": "^0.25.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.6.1",
     "nyc": "^12.0.2"
   },
   "dependencies": {
-    "@slimio/addon": "^0.4.0",
+    "@slimio/addon": "^0.5.0",
     "@slimio/is": "^1.1.0",
-    "@slimio/utils": "^0.3.0",
-    "better-sqlite3": "^4.1.4"
+    "@slimio/utils": "^0.4.0",
+    "better-sqlite3": "^4.1.4",
+    "uuid": "^3.3.2"
   }
 }
