--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@types/es6-shim": "^0.31.37",
     "@types/node": "^10.12.0",
     "ava": "^0.25.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "nyc": "^13.1.0"
   },
   "dependencies": {
     "@slimio/addon": "^0.10.0",
     "@slimio/is": "^1.2.0",
-    "@slimio/utils": "^0.4.0",
+    "@slimio/timer": "^1.0.0",
+    "@slimio/utils": "^0.5.0",
     "better-sqlite3": "^5.0.1",
-    "driftless": "^2.0.3",
     "uuid": "^3.3.2"
   }
 }
