--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@slimio/is": "^1.2.0",
     "@slimio/timer": "^1.0.0",
     "@slimio/utils": "^0.5.0",
+    "sqlite3": "^4.0.3",
     "uuid": "^3.3.2"
   }
 }
