--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@slimio/addon": "^0.14.3",
     "@slimio/is": "^1.3.0",
+    "@slimio/queue": "^0.1.0",
     "@slimio/timer": "^1.0.0",
     "@slimio/utils": "^0.5.0",
     "sqlite": "^3.0.0",
