--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/SlimIO/Events.git"
   },
   "keywords": [
-      "SlimIO",
-      "events"
+    "SlimIO",
+    "events"
   ],
   "author": "SlimIO",
   "license": "MIT",
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/SlimIO/Events#readme",
   "devDependencies": {
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "@escommunity/minami": "^1.0.0",
     "@slimio/eslint-config": "^2.0.3",
     "@types/es6-shim": "^0.31.39",
     "@types/node": "^10.12.24",
     "eslint": "^5.13.0",
+    "husky": "^1.3.1",
     "nyc": "^13.2.0"
   },
   "dependencies": {
