--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@slimio/addon": "^0.17.0",
     "@slimio/is": "^1.5.0",
     "@slimio/queue": "^0.2.1",
+    "@slimio/sqlite-transaction": "^0.1.0",
     "@slimio/timer": "^1.0.0",
     "@slimio/utils": "^0.9.0",
     "hyperid": "^2.0.2",
