chore(package): add files to the field files in package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "SlimIO",
     "events"
   ],
+  "files": [
+    "index.js",
+    "slimio.toml",
+    "src",
+    "sql"
+  ],
   "author": "SlimIO",
   "license": "MIT",
   "bugs": {
