--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "husky": {
     "hooks": {
+      "pre-push": "cross-env eslint index.js && npm test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
