--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@escommunity/minami": "^1.0.0",
     "@slimio/eslint-config": "^3.0.2",
     "@types/es6-shim": "^0.31.39",
+    "cross-env": "^5.2.0",
     "eslint": "^6.2.1",
     "husky": "^3.0.0",
     "jsdoc": "^3.6.2",
