--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@slimio/sqlite-transaction": "^0.1.0",
     "@slimio/timer": "^1.0.2",
     "@slimio/utils": "^0.9.0",
-    "hyperid": "^2.0.2",
-    "sqlite": "^3.0.3"
+    "sqlite": "^3.0.3",
+    "uuid": "^3.3.3"
   }
 }
