--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "doc": "jsdoc -c ./jsdoc.json -r -R ./README.md -P ./package.json --verbose",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env psp && node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -52,6 +52,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.2.1",
     "husky": "^3.0.0",
+    "japa": "^2.0.10",
     "jsdoc": "^3.6.2",
     "nyc": "^14.1.1"
   },
