--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
     "extends": "@slimio/eslint-config",
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "rules": {
         "no-return-await": "off",
         "require-await": "off"
