--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@slimio/eslint-config": "^3.0.3",
     "@types/es6-shim": "^0.31.39",
     "@types/sqlite3": "^3.1.5",
+    "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "husky": "^3.0.9",
