--- a/package.json
+++ b/package.json
@@ -48,10 +48,9 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@escommunity/minami": "^1.0.0",
-    "@slimio/eslint-config": "^3.0.3",
+    "@slimio/eslint-config": "^4.0.0-next.3",
     "@types/es6-shim": "^0.31.39",
     "@types/sqlite3": "^3.1.5",
-    "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "husky": "^3.0.9",
