--- a/package.json
+++ b/package.json
@@ -45,18 +45,18 @@
     "branches": 90
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@escommunity/minami": "^1.0.0",
-    "@slimio/eslint-config": "^4.0.0-next.3",
-    "@types/es6-shim": "^0.31.39",
-    "@types/sqlite3": "^3.1.5",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.6.0",
-    "husky": "^3.0.9",
+    "@slimio/eslint-config": "^4.1.0",
+    "@types/es6-shim": "^0.31.40",
+    "@types/sqlite3": "^3.1.6",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.1.0",
+    "husky": "^4.2.5",
     "japa": "^3.0.1",
-    "jsdoc": "^3.6.2",
-    "nyc": "^14.1.1"
+    "jsdoc": "^3.6.4",
+    "nyc": "^15.0.1"
   },
   "dependencies": {
     "@slimio/addon": "^0.22.1",
