--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
     "nyc": "^15.0.1"
   },
   "dependencies": {
+    "@lukeed/uuid": "^1.0.1",
     "@slimio/addon": "^0.22.1",
     "@slimio/is": "^1.5.0",
     "@slimio/queue": "^0.2.1",
     "@slimio/sqlite-transaction": "^0.1.0",
     "@slimio/utils": "^0.9.0",
-    "sqlite": "^3.0.3",
-    "uuid": "^3.3.3"
+    "sqlite": "^3.0.3"
   }
 }
